# CLARA

./: .gitignore  README.md
assistant/: pyproject.toml
assistant/intents/logging/: start.json  stop.json
assistant/intents/question/: about_assistant.json  internet.json
assistant/src/: app.py  intents_store.py  responses.py
assistant/src/classification/: prompt_builder.py  rag.py  send_request.py
classifier/: Dockerfile  app.py  intent_dataset.csv  intents.csv  pyproject.toml  requirements.txt
classifier/intent_model/: config.json  label2id.json
classifier/intents/: intents_store.py
classifier/intents/check_in_timer/: start.json  stop.json
classifier/intents/emergency_contacts/: contact_now.json  list.json
classifier/intents/general/: cancel.json
classifier/intents/logging/: log_my_day.json
classifier/intents/question/: about_assistant.json  internet.json
classifier/src/: intents_store.py
manager/: manage.py  pyproject.toml
manager/config/: clara-mac.ppn  clara.ppn
manager/src/: app.py  arduino.py  medication_logging.py  mongo.py  response_handler.py  send_request.py  transcription.py  wake_word.py
manager/src/assistant/: app.py  intent_mappings.py  main.py  pyproject.toml  responses.py  stt.py  tts.py
manager/src/assistant/classification/: send_request.py
manager/src/assistant/skills/: contact.py  general.py  question.py  reports.py  timer.py
manager/src/tts/: cloudspeech.py
manager/tests/: arduino_mode.py  list_mics.py  test_deepgram_stream.py  test_websocket.py
